--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jellybean",
   "version": "1.0.0",
-  "main": "electron-main.js",
+  "main": "electron.js",
   "scripts": {
     "start": "npm run dev",
     "dev": "concurrently \"npm:electron\" \"npm:serve\"",
@@ -11,15 +11,14 @@
     "package": "electron-builder"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^1.0.0",
-    "electron": "^16.0.0",
-    "electron-builder": "^22.0.0",
     "dotenv": "^10.0.0",
-    "vue": "^3.0.0",
-    "vite": "^2.0.0"
+    "electron": "^24.1.2",
+    "electron-builder": "^22.0.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "vite": "^4.3.2"
   },
   "devDependencies": {
-    "vercel": "^24.0.0",
-    "concurrently": "^7.0.0"
+    "concurrently": "^7.0.0",
+    "vue": "^3.0.0"
   }
 }
