--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "vite": "^4.3.2"
   },
   "devDependencies": {
-    "concurrently": "^7.0.0",
-    "vue": "^3.0.0"
+    "concurrently": "^7.0.0"
   }
 }
