--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "jellybean",
+  "name": "jelly-bean",
   "version": "1.0.0",
   "main": "electron.js",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "concurrently \"npm:electron\" \"npm:serve\"",
-    "electron": "electron .",
-    "serve": "vite",
-    "build": "vite build",
-    "package": "electron-builder"
+    "start": "electron electron.js"
   },
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "electron": "^24.1.2",
-    "electron-builder": "^22.0.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "vite": "^4.3.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zachshallbetter/Jelly-Bean.git"
   },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zachshallbetter/Jelly-Bean/issues"
+  },
+  "homepage": "https://github.com/zachshallbetter/Jelly-Bean#readme",
+  "keywords": [],
+  "description": "",
   "devDependencies": {
-    "concurrently": "^7.0.0"
+    "electron": "^24.1.3",
+    "electron-reload": "^2.0.0-alpha.1"
   }
 }
